Add setting menu user interface for SMS phone number

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,12 @@
             <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/device_filter" />
         </activity>
+        <activity android:name="SettingActivity">
+            <intent-filter>
+                <action android:name="com.dspg.ule.demo.SettingActivity" />
+                <category android:name="android.intent.category.DEFAULT" />                
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
